--- a/package.json
+++ b/package.json
@@ -1,24 +1,53 @@
 {
-  "name": "mealstogo",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+	"name": "mealstogo",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject",
+		"lint": "eslint . --ext .js --ignore-path .gitignore"
+	},
+	"dependencies": {
+		"@expo-google-fonts/lato": "^0.2.2",
+		"@expo-google-fonts/oswald": "^0.2.2",
+		"@expo/vector-icons": "^13.0.0",
+		"@react-native-async-storage/async-storage": "~1.17.3",
+		"@react-native-community/masked-view": "^0.1.11",
+		"@react-navigation/bottom-tabs": "^6.3.2",
+		"@react-navigation/native": "^6.0.11",
+		"@react-navigation/stack": "^5.12.8",
+		"camelize": "^1.0.0",
+		"expo": "~45.0.0",
+		"expo-font": "~10.1.0",
+		"expo-status-bar": "~1.3.0",
+		"firebase": "^9.9.2",
+		"lottie-react-native": "5.0.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-native": "0.68.2",
+		"react-native-async-storage": "^0.0.1",
+		"react-native-fs": "^2.20.0",
+		"react-native-gesture-handler": "~2.2.1",
+		"react-native-image-base64": "^0.1.4",
+		"react-native-maps": "0.30.2",
+		"react-native-paper": "^4.12.4",
+		"react-native-reanimated": "~2.8.0",
+		"react-native-safe-area-context": "4.2.4",
+		"react-native-screens": "~3.11.1",
+		"react-native-svg": "12.3.0",
+		"react-native-web": "0.17.7",
+		"react-native-webview": "11.18.1",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@react-native-community/eslint-config": "^3.1.0",
+		"eslint": "^8.21.0",
+		"eslint-plugin-react": "^7.30.1",
+		"prettier": "^2.7.1"
+	},
+	"private": true
 }
