--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
 		"@react-navigation/stack": "^5.12.8",
 		"camelize": "^1.0.0",
 		"expo": "~45.0.0",
+		"expo-camera": "~12.2.0",
 		"expo-font": "~10.1.0",
 		"expo-status-bar": "~1.3.0",
 		"expo-updates": "~0.13.4",
 		"firebase": "^9.9.2",
+		"firebase-admin": "^11.0.1",
+		"firebase-functions": "^3.23.0",
 		"lottie-react-native": "5.0.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
