--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint . --ext .js --ignore-path .gitignore"
 	},
 	"dependencies": {
+		"@expo-google-fonts/courier-prime": "^0.2.2",
 		"@expo-google-fonts/lato": "^0.2.2",
 		"@expo-google-fonts/oswald": "^0.2.2",
 		"@expo/vector-icons": "^13.0.0",
@@ -34,6 +35,7 @@
 		"react-dom": "17.0.2",
 		"react-native": "0.68.2",
 		"react-native-async-storage": "^0.0.1",
+		"react-native-credit-card-input": "^0.4.1",
 		"react-native-fs": "^2.20.0",
 		"react-native-gesture-handler": "~2.2.1",
 		"react-native-image-base64": "^0.1.4",
@@ -45,6 +47,7 @@
 		"react-native-svg": "12.3.0",
 		"react-native-web": "0.17.7",
 		"react-native-webview": "11.18.1",
+		"stripe-client": "^1.1.5",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
